k8s-manifest/debug-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: request-catcher-debug
  namespace: testing
spec:
  type: ClusterIP
  selector:
    app: request-catcher-debug
  ports:
    - name: http
      port: 80
      targetPort: 8080
