k8s-manifest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: request-catcher
  namespace: testing
spec:
  type: ClusterIP
  selector:
    app: request-catcher
  ports:
    - name: http
      port: 80
      targetPort: 8080
