k8s-manifest/alb-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: request-catcher-alb
  namespace: testing
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:082138612467:certificate/97655a8b-d570-413d-99ea-9fb9695ca949"
    # alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=300
    alb.ingress.kubernetes.io/transforms.request-catcher: >
      [{"type": "url-rewrite", "urlRewriteConfig": { "rewrites": [ {"regex": "^\\/api\\/(.+)$", "replace": "/$1"} ] }}]
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=300,routing.http.preserve_host_header.enabled=true,routing.http.xff_header_processing.mode=preserve
    # alb.ingress.kubernetes.io/actions.redirect-8000: >
    #   {"type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "Host": "#{host}", "Path": "/#{path}", "StatusCode": "HTTP_301"}}
    alb.ingress.kubernetes.io/conditions.request-catcher-debug: >
      [{"field":"http-header","httpHeaderConfig":{"httpHeaderName": "x-lever-debug", "values":["true"]}}]
    alb.ingress.kubernetes.io/actions.request-catcher-debug: >
      {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"request-catcher-debug","servicePort":"http","weight":100}]}}
spec:
  ingressClassName: alb
  rules:
    - host: request-catcher-alb.talemetry-sandbox.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: request-catcher-debug
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: request-catcher
                port:
                  number: 80
