k8s-manifest/manifest.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: testing

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: request-catcher
  namespace: testing
  labels:
    app: request-catcher
spec:
  replicas: 3
  selector:
    matchLabels:
      app: request-catcher
  template:
    metadata:
      labels:
        app: request-catcher
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: topology.kubernetes.io/zone
                    operator: In
                    values:
                      - us-east-1a
                      - us-east-1b
                      - us-east-1d
      containers:
        - name: request-catcher
          image: chiragsoni812/request-catcher:v1.0.3
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: request-catcher
  namespace: testing
spec:
  type: ClusterIP
  selector:
    app: request-catcher
  ports:
    - name: http
      port: 80
      targetPort: 8080



---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: request-catcher-debug
  namespace: testing
  labels:
    app: request-catcher-debug
spec:
  replicas: 3
  selector:
    matchLabels:
      app: request-catcher-debug
  template:
    metadata:
      labels:
        app: request-catcher-debug
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: topology.kubernetes.io/zone
                    operator: In
                    values:
                      - us-east-1a
                      - us-east-1b
                      - us-east-1d
      containers:
        - name: request-catcher-debug
          image: chiragsoni812/request-catcher:v1.0.3
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: request-catcher-debug
  namespace: testing
spec:
  type: ClusterIP
  selector:
    app: request-catcher-debug
  ports:
    - name: http
      port: 80
      targetPort: 8080



---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: request-catcher-alb
  namespace: testing
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:082138612467:certificate/97655a8b-d570-413d-99ea-9fb9695ca949"
    # alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=300
    alb.ingress.kubernetes.io/transforms.request-catcher: >
      [{"type": "url-rewrite", "urlRewriteConfig": { "rewrites": [ {"regex": "^\\/api\\/(.+)$", "replace": "/$1"} ] }}]
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=300,routing.http.preserve_host_header.enabled=true,routing.http.xff_header_processing.mode=preserve
    # alb.ingress.kubernetes.io/actions.redirect-8000: >
    #   {"type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "Host": "#{host}", "Path": "/#{path}", "StatusCode": "HTTP_301"}}
    alb.ingress.kubernetes.io/conditions.request-catcher-debug: >
      [{"field":"http-header","httpHeaderConfig":{"httpHeaderName": "x-lever-debug", "values":["true"]}}]
    alb.ingress.kubernetes.io/actions.request-catcher-debug: >
      {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"request-catcher-debug","servicePort":"http","weight":100}]}}
spec:
  ingressClassName: alb
  rules:
    - host: request-catcher-alb.talemetry-sandbox.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: request-catcher-debug
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: request-catcher
                port:
                  number: 80
